GNOME Bugzilla – Bug 634356
file-roller does not build without packagekit
Last modified: 2010-11-08 23:00:54 UTC
this is with file-roller 2.91.1 and --disable-packagekit: CC dlg-update.o i686-pc-linux-gnu-gcc -DHAVE_CONFIG_H -I. -I.. -I../copy-n-paste/ -I.. -I.. -DFR_PREFIX=\"/usr\" -DFR_SYSCONFDIR=\"/etc\" -DFR_DATADIR=\"/usr/share\" -DPRIVDATADIR=\"/usr/share/file-roller/\" -DUI_DIR=\"/usr/share/file-roller/ui\" -DFR_LIBDIR=\"/usr/lib\" -DPKG_DATA_DIR=\"/usr/share/file-roller\" -DPIXMAPSDIR=\""/usr/share/pixmaps"\" -DGLADEDIR=\"""\" -DPRIVEXECDIR=\"/usr/libexec/file-roller/\" -DSHDIR=\"/usr/libexec/file-roller/\" -pthread -DGSEAL_ENABLE -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/gio-unix-2.0/ -I/usr/include/gtk-3.0 -I/usr/lib/gtk-3.0/include -I/usr/include/atk-1.0 -I/usr/include/cairo -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/pango-1.0 -I/usr/include/pixman-1 -I/usr/include/freetype2 -I/usr/include/libpng14 -I/usr/include/libdrm -O2 -march=prescott -pipe -fomit-frame-pointer -ggdb -c dlg-update.c dlg-package-installer.c: In function ‘dlg_package_installer’: dlg-package-installer.c:303: error: incompatible type for argument 2 of ‘package_installer_terminated’ dlg-package-installer.c:50: note: expected ‘FrProcErrorType’ but argument is of type ‘char *’ dlg-package-installer.c:303: error: too few arguments to function ‘package_installer_terminated’ make[4]: *** [dlg-package-installer.o] Error 1 make[4]: *** Waiting for unfinished jobs.... make[4]: Leaving directory `/var/tmp/portage/app-arch/file-roller-2.91.1/work/file-roller-2.91.1/src' make[3]: *** [all-recursive] Error 1 make[3]: Leaving directory `/var/tmp/portage/app-arch/file-roller-2.91.1/work/file-roller-2.91.1/src' make[2]: *** [all] Error 2 make[2]: Leaving directory `/var/tmp/portage/app-arch/file-roller-2.91.1/work/file-roller-2.91.1/src' make[1]: *** [all-recursive] Error 1 make[1]: Leaving directory `/var/tmp/portage/app-arch/file-roller-2.91.1/work/file-roller-2.91.1' make: *** [all] Error 2 emake failed
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.